<resources>
    <string name="app_name">Did You Work Out 3.0</string>

    <string name="title">Workout Routines</string>

    <string name="name">Enter Name: </string>

    <string name="description">Enter Description: </string>

    <string name="quantity">Enter Quantity: </string>

    <string name="add">Add</string>

    <string name="delete">Delete</string>

    <string name="modify">Modify</string>

    <string name="view">View</string>

    <string name="view_all">View All</string>

    <string name="show_info">Show Information</string>
</resources>
