<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:stretchColumns="0" android:id="@+id/myLayout" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_y="10dp"
        android:layout_x="110dp"
        android:text="@string/title"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_y="50dp"
        android:layout_x="30dp"
        android:text="@string/name"/>

    <EditText
        android:layout_height="40dp"
        android:layout_width="150dp"
        android:id="@+id/editRollno"
        android:layout_y="50dp"
        android:layout_x="150dp"
        android:inputType="text"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_y="100dp"
        android:layout_x="30dp"
        android:text="@string/description"/>

    <EditText
        android:layout_height="40dp"
        android:layout_width="150dp"
        android:id="@+id/editName"
        android:layout_y="100dp"
        android:layout_x="150dp"
        android:inputType="text"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_y="150dp"
        android:layout_x="30dp"
        android:text="@string/quantity"/>

    <EditText
        android:layout_height="40dp"
        android:layout_width="150dp"
        android:id="@+id/editMarks"
        android:layout_y="150dp"
        android:layout_x="150dp"
        android:inputType="number"/>

    <Button
        android:layout_height="40dp"
        android:layout_width="100dp"
        android:id="@+id/btnAdd"
        android:layout_y="200dp"
        android:layout_x="30dp"
        android:text="@string/add"/>

    <Button
        android:layout_height="40dp"
        android:layout_width="100dp"
        android:id="@+id/btnDelete"
        android:layout_y="200dp"
        android:layout_x="150dp"
        android:text="@string/delete"/>

    <Button
        android:layout_height="40dp"
        android:layout_width="100dp"
        android:id="@+id/btnModify"
        android:layout_y="250dp"
        android:layout_x="30dp"
        android:text="@string/modify"/>

    <Button
        android:layout_height="40dp"
        android:layout_width="100dp"
        android:id="@+id/btnView"
        android:layout_y="250dp"
        android:layout_x="150dp"
        android:text="@string/view"/>

    <Button
        android:layout_height="40dp"
        android:layout_width="100dp"
        android:id="@+id/btnViewAll"
        android:layout_y="300dp"
        android:layout_x="30dp"
        android:text="@string/view_all"/>

    <Button
        android:layout_height="40dp"
        android:layout_width="100dp"
        android:id="@+id/btnShowInfo"
        android:layout_y="300dp"
        android:layout_x="150dp"
        android:text="@string/show_info"/>

</AbsoluteLayout>
